[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Items/Bomb.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MainScenes/Audio.gd" type="Script" id=2]
[ext_resource path="res://Scripts/FX/Particles.gd" type="Script" id=3]
[ext_resource path="res://Resources/Audio/FX/Bomb2.wav" type="AudioStream" id=4]
[ext_resource path="res://Resources/Audio/FX/FXLasting.wav" type="AudioStream" id=5]
[ext_resource path="res://Scenes/HelperScenes/Laser4.gd" type="Script" id=6]
[ext_resource path="res://Resources/Audio/FX/countdown.wav" type="AudioStream" id=7]
[ext_resource path="res://Scenes/HelperScenes/Items/PowerupPill.tscn" type="PackedScene" id=8]

[sub_resource type="CanvasItemMaterial" id=9]
light_mode = 1

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.891304, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2000.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 160.0
damping_random = 1.0
scale = 10.0
scale_random = 1.0
scale_curve = SubResource( 4 )

[sub_resource type="CircleShape2D" id=5]

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.814815, 0.0090909 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 524.35
orbit_velocity = 1.0
orbit_velocity_random = 0.0
scale = 3.0
scale_curve = SubResource( 7 )

[node name="Laser4" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 0
script = ExtResource( 6 )
lifetime = 1.6

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
pitch_scale = 1.2
autoplay = true
script = ExtResource( 2 )
default_vol = -5.0

[node name="LaserSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
pitch_scale = 0.6
autoplay = true
script = ExtResource( 2 )

[node name="Bomb" type="Node2D" parent="."]
scale = Vector2( 0.1, 0.1 )

[node name="PowerupPill" parent="Bomb" instance=ExtResource( 8 )]
collision_layer = 8
collision_mask = 3
script = ExtResource( 1 )
rot_speed = 6

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Bomb/PowerupPill"]
stream = ExtResource( 4 )
volume_db = -5.0
pitch_scale = 0.6
script = ExtResource( 2 )
default_vol = -5.0

[node name="ExplosionParticles" type="Particles2D" parent="Bomb/PowerupPill"]
material = SubResource( 9 )
emitting = false
amount = 300
lifetime = 3.0
explosiveness = 0.97
local_coords = false
process_material = SubResource( 2 )
script = ExtResource( 3 )

[node name="DeleteTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="LaserParticleEffect" type="Particles2D" parent="."]
material = SubResource( 9 )
scale = Vector2( 2, 2 )
amount = 60
lifetime = 0.5
explosiveness = 1.0
process_material = SubResource( 8 )

[connection signal="timeout" from="DeleteTimer" to="." method="_on_DeleteTimer_timeout"]
